## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gcnccam_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gcnccam_pixmaps_DATA = \
	layer16.png\
	layerprop16.png\
	layerprop20.png\
	layerprop_del20.png\
	tool16.png\
	tool20.png\
	tool_del20.png\
	gcnccam.xpm

EXTRA_DIST = $(gcnccam_pixmaps_DATA)
