## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	$(PACKAGE_CFLAGS)

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gcnccam

gcnccam_SOURCES = \
	Point2D.cc\
	Point2D.h\
	Shape.cc\
	Shape.h\
	Line.cc\
	Line.h\
	Arc.cc\
	Arc.h\
	DxfReader.h\
	Graph.cc\
	Graph.h\
	DxfReader.cc\
	Vertex.cc\
	Vertex.h\
	GraphListVerticesBits.cc\
	GraphListVerticesBits.h\
	GraphList.cc\
	GraphList.h\
	Cycle.cc\
	Cycle.h\
	Layer.cc\
	Layer.h\
	LayerList.cc\
	LayerList.h\
	Tool.cc\
	Tool.h\
	ToolList.cc\
	ToolList.h\
	LayerProperty.cc\
	LayerProperty.h\
	LayerPropertyList.cc\
	LayerPropertyList.h\
	FrameTool.hh\
	FrameTool_glade.hh\
	FrameTool_glade.cc\
	FrameTool.cc\
	FrameLayerProperty.hh\
	FrameLayerProperty_glade.hh\
	FrameLayerProperty_glade.cc\
	FrameLayerProperty.cc\
	CadDrawingArea.cc\
	CadDrawingArea.h\
	Connection.cc\
	Connection.h\
	ConnectionProperty.cc\
	ConnectionProperty.h\
	ConnectionGraph.cc\
	ConnectionGraph.h\
	DialogSetting.cc\
	DialogSetting.hh\
	DialogSetting_glade.cc\
	DialogSetting_glade.hh\
	ConfigSettings.h\
	ConfigSettings.cc\
	DxfBlockList.h\
	DxfBlockList.cc\
	LayerListBase.cc\
	LayerListBase.h\
	DxfBlock.cc\
	DxfBlock.h\
	GerberNcReader.cc\
	GerberNcReader.h\
	WindowMain.hh\
	WindowMain_glade.hh\
	WindowMain_glade.cc\
	WindowMain.cc\
	gcnccam.cc

gcnccam_LDFLAGS = 

gcnccam_LDADD = \
	$(PACKAGE_LIBS)

